--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ELECTORA - Tamil Nadu Dashboard</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="ELECTORA - Tamil Nadu Political Dashboard for Voter Pulse and Campaign Analysis" />
+    <meta name="keywords" content="Tamil Nadu, Politics, AIADMK, Voter Analysis, Campaign Dashboard" />
+    <meta name="author" content="ELECTORA Team" />
+    <title>ELECTORA - Tamil Nadu Voter Pulse Dashboard</title>
+    
+    <!-- Preload critical fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- PWA Support -->
+    <meta name="theme-color" content="#334155" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="ELECTORA">
   </head>
   <body>
     <div id="root"></div>
